[package]
name = "rgantt"
version = "0.1.0"
authors = ["Aliaksei", "Pavel"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
yew = { version= "0.20", features = ["csr"] }
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
log = "0.4"
console_log = { version = "1.0.0", features = ["color"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
hypermelon = "0.5.5"
rand = { version = "0.8.5"}
getrandom = { version = "0.2", features = ["js"] }